--- a/wdip-fe/package.json
+++ b/wdip-fe/package.json
@@ -19,7 +19,7 @@
         "react-date-picker": "^7.0.0",
         "react-dom": "^16.6.0",
         "react-foundation": "^0.9.6",
-        "react-scripts-ts": "2.17.0",
+        "react-scripts-ts": "^4.0.8",
         "recharts": "^1.3.5"
     },
     "scripts": {
